Adding a Mvc example

--- a/Examples/EventEmiter/package.json
+++ b/Examples/EventEmiter/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
